--- a/src/app/updateprofile/updateprofile.component.html
+++ b/src/app/updateprofile/updateprofile.component.html
@@ -50,7 +50,8 @@
              <div class="col p-5" style="align-content: center;">
                           
                <button type="submit" class="btn btn-info ">submit</button>
-               <button type="button" class="btn btn-info " ><a style="text-decoration: none;" routerlink="/profile">cancle</a></button>
+                <button type="button" class="btn btn-info " ><a style="text-decoration: none;" routerlink="/profile">cancel</a></button>
+            
              </div>
             </form>
 
