--- a/src/app/pre/pre.component.html
+++ b/src/app/pre/pre.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-primary">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <div class="container-fluid">
     <img src="https://i.postimg.cc/652svFLG/books-1.png"   alt="" width="45px" height="45px">
     <a class="navbar-brand active" routerLink="pre"> Book Store</a>
@@ -11,7 +11,7 @@
           <a class="nav-link active" aria-current="page" routerLink="/login">Login <img src="https://i.postimg.cc/8PYVjN2v/login-1.png"   alt="" height="18px" width="18px"></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/register">Register  <img src="https://i.postimg.cc/52k5hkFb/edit.png"   alt="" height="23px" width="23px"></a>
+          <a class="nav-link active" routerLink="/register">Register  <img src="https://i.postimg.cc/52k5hkFb/edit.png"   alt="" height="23px" width="23px"></a>
         </li>
       </ul>
       <ul class="d-flex float-end">
@@ -41,7 +41,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav " *ngFor="let obj of categories;">    
-      <li class="nav-item" style="display: inline-block;"  style="padding:0;margin-left:50px;"><a role="button" (click)="findcat(obj)">{{obj.ct}}   |</a></li>
+      <li class="nav-item " style="display: inline-block;"  style="padding:0;margin-left:50px;"><a role="button" (click)="findcat(obj)"><b>{{obj.ct}}   </b></a></li>
       </ul>
   
 </div>
