--- a/src/app/viewproducts/viewproducts.component.html
+++ b/src/app/viewproducts/viewproducts.component.html
@@ -16,7 +16,7 @@
     </div>
     <div class="col-sm-4" >
       <div class="col-md-6 text-center" style="color: white;">
-        <form class="form row g-3 ml-5" #formRef="ngForm" (ngSubmit)="onSubmit(formRef)">
+        <form class="form row g-3 ml-5" #formRef="ngForm" >
               
           <div class="form-group" hidden>
           <!-- <label for="inputusername" class="form-label">Product Name</label>
