--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -50,7 +50,7 @@
 
         <div class="col-3">
                             
-          <button type="button button-danger" class="btn btn-danger " (click)="delete(obj)">Remove</button>
+          <button type="button button-danger" class="btn btn-danger " (click)="delete(obj,i)">Remove</button>
         </div>
       </div>
       <div class="col-md-4">
