--- a/src/app/pre/pre.component.html
+++ b/src/app/pre/pre.component.html
@@ -8,10 +8,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" routerLink="/login">Login <img src="https://i.postimg.cc/8PYVjN2v/login-1.png"   alt="" height="18px" width="18px"></a>
+          <a class="nav-link active" aria-current="page" style="text-decoration: none;" routerLink="/login">Login <img src="https://i.postimg.cc/8PYVjN2v/login-1.png"   alt="" height="18px" width="18px"></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/register">Register  <img src="https://i.postimg.cc/52k5hkFb/edit.png"   alt="" height="23px" width="23px"></a>
+          <a class="nav-link" style="text-decoration: none;" routerLink="/register">Register  <img src="https://i.postimg.cc/52k5hkFb/edit.png"   alt="" height="23px" width="23px"></a>
         </li>
       </ul>
       <ul class="d-flex float-end">
@@ -34,7 +34,7 @@
 <router-outlet></router-outlet>
 
 <!--Pre-->
-<div class="container mt-6 bg-primary "  >
+<div class="container mt-6 bg-primary " style="border-style: solid; border-color: white;"  >
   <nav class="navbar" >
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
