--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -61,8 +61,9 @@
                             ile" >
                           </div>
              
-                        <div class="col-6">
+                        <div class="col p-5 text-center">
                             <button type="submit" class="btn btn-primary">Add Product</button>
+                            <button class="btn btn-primary" (click)="cancel()"> Cancle</button>
                           </div>
                          
 
