--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,10 +9,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" style="color: black;" data-bs-toogle="collapse" data-bs-target="#navbarSupportedContent" routerLink="/home">Home <img src="https://i.postimg.cc/BnbCbGxd/home-1.png"   alt="" height="15px" width="15px">  </a>
+          <a class="nav-link active" aria-current="page" style="color: black;" data-bs-toogle="collapse" data-bs-target="#navbarSupportedContent" style="text-decoration: none;" routerLink="/home">Home <img src="https://i.postimg.cc/BnbCbGxd/home-1.png"   alt="" height="15px" width="15px">  </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" (click)="Logout()" style="color: black;" data-bs-toogle="collapse" data-bs-target=".navbar-collapse.show" routerLink="/login">LogOut  <img src="https://i.postimg.cc/52k5hkFb/edit.png"   alt="" height="23px" width="23px"></a>
+          <a class="nav-link" (click)="Logout()" style="color: black;" data-bs-toogle="collapse" data-bs-target=".navbar-collapse.show" style="text-decoration: none;" routerLink="/login">LogOut  <img src="https://i.postimg.cc/52k5hkFb/edit.png"   alt="" height="23px" width="23px"></a>
         </li>
       </ul>
       <ul class="d-flex float-end">
