--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary " >
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary "  >
   <div class="container-fluid">
     <img src="https://i.postimg.cc/652svFLG/books-1.png"   alt="" width="45px" height="45px">
     <a class="navbar-brand active" routerLink="pre"> Book Store</a>
@@ -8,13 +8,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" routerLink="/home">Home <img src="https://i.postimg.cc/BnbCbGxd/home-1.png"   alt="" height="15px" width="15px"> </a>
+          <a class="nav-link active"  style="text-decoration: none;" aria-current="page" routerLink="/home">Home <img src="https://i.postimg.cc/BnbCbGxd/home-1.png"   alt="" height="15px" width="15px"> </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" routerLink="/login">Login <img src="https://i.postimg.cc/8PYVjN2v/login-1.png"   alt="" height="18px" width="18px"></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active"   routerLink="/register">Register  <img src="https://i.postimg.cc/52k5hkFb/edit.png"   alt="" height="23px" width="23px"></a>
+          <a class="nav-link active" style="text-decoration: none;" routerLink="/register">Register  <img src="https://i.postimg.cc/52k5hkFb/edit.png"   alt="" height="23px" width="23px"></a>
         </li>
       </ul>
      
@@ -22,7 +19,7 @@
   </div>
 </nav>
 
-<div class="container " style="max-height: 100%;" >
+<div class="container " style="padding:5% 0 18% 0;" >
 <div class="row mt-5">
     <div class="col-md-3">
       <img src="https://i.postimg.cc/RVb4hVkn/image1.png" alt="">
