--- a/src/app/pre/pre.component.html
+++ b/src/app/pre/pre.component.html
@@ -8,10 +8,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" routerLink="/login">Login <img src="https://i.postimg.cc/8PYVjN2v/login-1.png"   alt="" height="18px" width="18px"></a>
+          <a class="nav-link active" style="text-decoration: none;" aria-current="page" routerLink="/login">Login <img src="https://i.postimg.cc/8PYVjN2v/login-1.png"   alt="" height="18px" width="18px"></a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link active" routerLink="/register">Register  <img src="https://i.postimg.cc/52k5hkFb/edit.png"   alt="" height="23px" width="23px"></a>
+        <li class="nav-item" >
+          <a class="nav-link active"  style="text-decoration: none;" routerLink="/register">Register  <img src="https://i.postimg.cc/52k5hkFb/edit.png"   alt="" height="23px" width="23px"></a>
         </li>
       </ul>
       <ul class="d-flex float-end">
@@ -130,15 +130,7 @@
                 
                 <p class="card-text"><b>Rs.{{get.price}}</b></p>
                 <button type="button" class="close btn-danget float-end" data-dismiss="modal">&times;</button>
-                       
-                        <!--  <h1>Prod details</h1>
-                        <button type="button" class="close float-end" data-dismiss="modal">&times;</button>
--->
-                      </div>
-                     <!-- <div class="modal-footer">
-                        <button  class="btn btn-default"(click)="ifOk()" data-dismiss="modal">Ok</button>
-                      </div>-->
-                    </div>
+                      
                     
                   </div>
                 </div>
