--- a/src/app/productdetails/productdetails.component.html
+++ b/src/app/productdetails/productdetails.component.html
@@ -1,50 +1,10 @@
-<div class="container-fluid bg-primary" >
+<div class="container-fluid bg-primary"  >
   <a class="btn float-end m-2" routerLink="/home">back</a>
   <button class=" btn float-end m-2" (click)="goto()">Add Products</button>
   <a class="btn float-end m-2" style="text-decoration: none;" (click)="Logout()">Log Out</a>
 </div>
-<!--
-<div class="container">
-  
-    <div class="col-sm-12">
-      <div class="row">
-        <div  *ngFor="let obj of courses">
-            <div *ngIf="obj.category=='FullStack'">
-              <div class="card" style="width: 18rem;">
-                <img class="card-img-top" [src]="obj.image" alt="Card image cap">
-                <div class="card-body">
-                  <h5 class="card-title">{{obj.bookname}}</h5>
-                  <p class="card-text">{{obj.author}}</p>
-                  <p class="card-text">Rs.{{obj.price}}</p>
-                  <a href="#" class="btn btn-primary">Edit</a>
 
-                </div>
-              </div>
-            </div>
-        </div>
-      </div>
-    </div>
-  </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-3" *ngFor="let obj of courses">
-            <div *ngIf="obj.category=='NodeJS'">
-              <div class="card" style="width: 18rem;">
-                <img class="card-img-top" [src]="obj.image" alt="Card image cap">
-                <div class="card-body">
-                  <h5 class="card-title">{{obj.bookname}}</h5>
-                  <p class="card-text">{{obj.author}}</p>
-                  <p class="card-text">Rs.{{obj.price}}</p>
-                  <a href="#" class="btn btn-primary">Edit</a>
-                </div>
-              </div>
-            </div>
-        </div>
-      </div>
-    </div>
-    -->
-
-    <div class="container bg-primary" style="color: black;">
+    <div class="container bg-primary mt-2"  style="color: black;">
       <div class="row">
         <div class="col-sm-4 " style="padding-bottom: 20px;" *ngFor="let obj of courses; let i= index" >
           <div class="card mb-3"  style="max-width: 540px;">
