--- a/src/app/wishlist/wishlist.component.html
+++ b/src/app/wishlist/wishlist.component.html
@@ -14,6 +14,7 @@
           <a class="nav-link" (click)="Logout()" style="color: black;" data-bs-toogle="collapse" data-bs-target=".navbar-collapse.show" routerLink="/login">LogOut  <img src="https://i.postimg.cc/52k5hkFb/edit.png"   alt="" height="23px" width="23px"></a>
         </li>
       </ul>
+      
      
    
     
@@ -23,6 +24,7 @@
 
 
 <div class="container">
+  <h1 style="text-align: center;"><i><b>Wishlist</b></i></h1>
     <div class="row">
         <div class="container">
             <div class="col-md-12 p-3" style="border-style: solid;" *ngFor="let obj of products; let i=index">
